# amira-amirabot-analysis

./: .gitignore  .pre-commit-config.yaml  README.md  main.py  main.py.bak  normalize_to_csv.py  pyproject.toml
amira_analysis/: __init__.py  aggregator.py  cli.py  constants.py  fetcher.py  models.py  reports.py  storage.py
amira_analysis/analyzers/: __init__.py  ai.py  base.py
amira_analysis/reports/: README.md  __init__.py  formatters.py  models.py
output/: summary_report.json  summary_report.md
